client/src/scss/dictionary.scss
.dictionary {
  padding: 30px;

  &__header {
    display: flex;
    justify-content: space-between;
    align-items: center;

    img {
      max-width: 40px;
      margin-right: 20px;
    }

    h1 {
      font-size: 2.3rem;
      line-height: 1.2;
      display: inline;
      vertical-align: bottom;
      text-shadow: 2px 2px 4px $dark-blue;
    }
  }

  &__title {
    color: #656565;
    font-size: 22px;
  }

  &__table {
    margin-top: 20px;
    max-height: calc(100vh - 235px);
    overflow: auto;

    table {
      width: 100%;
    }

    td {
      padding: 15px 20px;
      border-top: 2px solid darkgray;
      min-width: 150px;
      max-width: 320px;
      transition: all .3s ease;

      &.hide {
        opacity: 0;
        cursor: pointer;
      }

      img {
        max-width: 34px;
        margin-right: 15px;
      }

      span {
        cursor: pointer;
      }
    }

    th {
      padding: 15px 20px;
      text-align: left;
      color: #656565;
    }
  }

  &__options {
    position: relative;
    display: flex;
    padding-top: 20px;

    &__item {
      display: flex;
      align-items: center;
      padding: 9px 20px;
      max-width: 190px;
      width: 100%;
      cursor: pointer;
      border-left: 3px solid transparent;
      transition: all .3s ease;
      position: relative;

      &:hover, &.active {
        border-color: #39A2FB;
      }

      &.blue {
        background-color: #39A2FB;

        span {
          color: white;
        }
      }

      &.white {
        background-color: white;

        span {
          color: #B4BCCE;
        }
      }

      &.is-open, &.is-close {
        &:before {
          content: '';
          border: solid white;
          border-width: 0 3px 3px 0;
          display: inline-block;
          padding: 3px;
          position: absolute;
          right: 13px;
          transform: rotate(45deg);
        }
      }

      &.is-open:before {
        border-width: 3px 0 0 3px;
        top: 19px;
      }

      img {
        max-width: 25px;
      }

      span {
        font-size: 1rem;
        line-height: 1.2;
        padding-left: 15px;
        font-weight: 500;
      }
    }
  }

  &__dropdown {
    position: absolute;
    width: 100%;
    top: 76px;

    li:not(:last-child) {
      border-bottom: 1px solid #B4BCCE;
    }
  }
}

